release process improvements